<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF59D"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.anhdt.weatherforecast.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/hint_search_city_state"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light"
                android:text="@string/search_ok"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:text="@string/title_name_of_city"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="5"
            android:gravity="left|center_vertical"
            android:text="@string/name_of_city"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:text="@string/title_name_country"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="5"
            android:gravity="left|center_vertical"
            android:text="@string/name_of_country"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </TableRow>

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/temperature"
        android:textColor="@android:color/holo_red_light"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/clouds"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_figure"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_humidity" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:height="20dp"
                android:text="Độ ẩm"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_cloud" />

            <TextView
                android:id="@+id/tv_cloud"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:height="20dp"
                android:text="@string/have_cloud" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_wind" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:height="20dp"
                android:text="@string/wind" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_day_update"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/day_update"
        android:textColor="#000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_days_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/days_next"
        android:textColor="#FFF"
        android:textStyle="bold" />


</LinearLayout>
